--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ a, a:visited {
 	transition: all 0.3s ease-in-out;
 }
 a:hover, a:focus, a:active {
-	color: crimson;
+    color: steelblue;
 	outline: 0;
 }
 
@@ -301,7 +301,7 @@ ul.disc li::before {
 	width: 8px;
 	height: 8px;
 	border-radius: 50%;
-	background: crimson;
+	background: steelblue;
 	position: absolute;
 	left: -17px;
 	top: 11px;
@@ -309,7 +309,7 @@ ul.disc li::before {
 }
 dt {
 	margin: 0;
-	color: crimson;
+	color: steelblue;
 }
 dd {
 	margin: 0 0 0 2rem;
@@ -429,7 +429,7 @@ img.pull-left {
 	display: none;
 }
 .pace .pace-progress {
-	background: crimson;
+	background: steelblue;
 	position: fixed;
 	z-index: 900;
 	top: 0;
@@ -472,7 +472,7 @@ img.pull-left {
 	border-top: 11px solid rgba(255, 255, 255, 0.1);
 	border-right: 11px solid rgba(255, 255, 255, 0.1);
 	border-bottom: 11px solid rgba(255, 255, 255, 0.1);
-	border-left: 11px solid crimson;
+	border-left: 11px solid steelblue;
 	-webkit-animation: load 1.1s infinite linear;
 	animation: load 1.1s infinite linear;
 	display: block;
@@ -594,8 +594,8 @@ input[type="url"]:focus,
 input[type="password"]:focus,
 textarea:focus,
 select:focus {
-	color: crimson;
-	border-bottom: 1px solid crimson;
+	color: steelblue;
+	border-bottom: 1px solid steelblue;
 }
 label, legend {
 	font-family: "poppins-bold", sans-serif;
@@ -736,8 +736,8 @@ button.stroke.large, .button.stroke.large {
 	line-height: 5.4rem !important;
 }
 button.stroke:hover, .button.stroke:hover {
-	border: 3px solid crimson;
-	color: crimson;
+	border: 3px solid steelblue;
+	color: steelblue;
 }
 button::-moz-focus-inner, input::-moz-focus-inner {
 	border: 0;
@@ -925,7 +925,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	color: #252525;
 }
 .stats-tabs li a:hover {
-	color: crimson;
+	color: steelblue;
 }
 .stats-tabs li a em {
 	display: block;
@@ -1041,7 +1041,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	margin-bottom: 1.2rem;
 }
 .section-intro h5 {
-	color: crimson;
+	color: steelblue;
 	font-size: 1.6rem;
 	line-height: 1.875;
 	margin-bottom: 0.3rem;
@@ -1138,7 +1138,7 @@ header .logo a {
 }
 .menu-toggle span {
 	display: block;
-	background-color: crimson;
+	background-color: steelblue;
 	width: 24px;
 	height: 3px;
 	margin-top: -1.5px;
@@ -1196,7 +1196,7 @@ header .logo a {
 	background-color: rgba(255, 0, 119, 0);
 }
 .menu-toggle.is-clicked span::before, .menu-toggle.is-clicked span::after {
-	background-color: crimson;
+	background-color: steelblue;
 	-moz-transition-delay: 0s, 0.2s;
 	-o-transition-delay: 0s, 0.2s;
 	-webkit-transition-delay: 0s, 0.2s;
@@ -1252,12 +1252,12 @@ header .logo a {
 	border: none;
 }
 .main-navigation li a:hover {
-	color: crimson;
+	color: steelblue;
 	padding-left: 1rem;
 }
 .main-navigation li.current > a {
 	background: none;
-	color: crimson;
+	color: steelblue;
 }
 
 /**
@@ -1337,7 +1337,7 @@ header .logo a {
 	text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 .intro-content h5 {
-	color: crimson;
+	color: steelblue;
 	font-family: "poppins-bold", sans-serif;
 	font-size: 2.3rem;
 	line-height: 1.565;
@@ -1384,7 +1384,7 @@ header .logo a {
 	letter-spacing: .25rem;
 }
 .intro-content .button:hover, .intro-content .button:focus {
-	border-color: crimson;
+	border-color: steelblue;
 }
 .intro-content .button::after {
 	display: inline-block;
@@ -1416,7 +1416,7 @@ header .logo a {
 	color: #FFFFFF;
 }
 .intro-social li a:hover, .intro-social li a:focus {
-	color: crimson;
+	color: steelblue;
 }
 
 /**
@@ -1629,7 +1629,7 @@ header .logo a {
 	text-align: center;
 }
 #resume .resume-header h2 {
-	color: crimson;
+	color: steelblue;
 }
 
 #resume .resume-timeline {
@@ -1958,7 +1958,7 @@ header .logo a {
 	border-right: 1px solid rgba(200, 200, 200, 0.1);
 }
 .popup-modal .link-box a:hover {
-	background: crimson;
+	background: steelblue;
 	border: none;
 }
 @media only screen and (max-width:600px) {
@@ -2124,7 +2124,7 @@ header .logo a {
 	color: white;
 }
 #services .section-intro h5 {
-	color: crimson;
+	color: steelblue;
 }
 #services .section-intro p {
 	color: rgba(255, 255, 255, 0.7);
@@ -2146,7 +2146,7 @@ header .logo a {
 }
 .services-list .icon i {
 	font-size: 5.4rem;
-	color: crimson;
+	color: steelblue;
 }
 .services-list h3 {
 	color: #FFFFFF;
@@ -2174,7 +2174,7 @@ header .logo a {
 	background: #FFFFFF;
 }
 .owl-theme .owl-controls .owl-page.active span {
-	background: crimson;
+	background: steelblue;
 }
 
 
@@ -2185,7 +2185,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #stats {
-	background: crimson;
+	background: steelblue;
 	padding-top: 7.2rem;
 	padding-bottom: 6rem;
 	text-align: center;
@@ -2260,7 +2260,7 @@ header .logo a {
 	color: white;
 }
 #contact .section-intro h5 {
-	color: crimson;
+	color: steelblue;
 }
 #contact .section-intro p {
 	color: rgba(255, 255, 255, 0.7);
@@ -2313,7 +2313,7 @@ header .logo a {
 	padding: 0 2rem;
 	margin: 0;
 	color: #FFFFFF;
-	background: crimson;
+	background: steelblue;
 }
 #contact form .form-field label::after {
 	position: absolute;
@@ -2322,7 +2322,7 @@ header .logo a {
 	margin-top: -6px;
 	border-top: 5px solid transparent;
 	border-bottom: 5px solid transparent;
-	border-right: 5px solid crimson;
+	border-right: 5px solid steelblue;
 	content: "";
 }
 #contact input[type="text"],
@@ -2344,7 +2344,7 @@ header .logo a {
 #contact input[type="text"]:focus,
 #contact input[type="password"]:focus,
 #contact input[type="email"]:focus {
-	border-color: crimson;
+	border-color: steelblue;
 	color: #FFFFFF;
 }
 #contact textarea {
@@ -2352,7 +2352,7 @@ header .logo a {
 	padding: 1.8rem 2rem;
 }
 #contact textarea:focus {
-	border-color: crimson;
+	border-color: steelblue;
 	color: #FFFFFF;
 }
 #contact button.submitform {
@@ -2364,11 +2364,11 @@ header .logo a {
 	padding: 0 3rem;
 	margin-top: 4.8rem;
 	width: 100%;
-	background: crimson;
+	background: steelblue;
 	color: #FFFFFF;
 }
 #contact button.submitform:hover, #contact button.submitform:focus {
-	background: crimson;
+	background: steelblue;
 }
 #message-warning, #message-success {
 	display: none;
@@ -2382,7 +2382,7 @@ header .logo a {
 	color: #fa0003;
 }
 #message-success {
-	color: crimson;
+	color: steelblue;
 }
 #message-warning i, #message-success i {
 	margin-right: 10px;
@@ -2427,7 +2427,7 @@ header .logo a {
 	color: #FFFFFF;
 }
 .contact-info h5 {
-	color: crimson;
+	color: steelblue;
 }
 
 /**
@@ -2501,7 +2501,7 @@ footer a, footer a:visited {
 	color: #FFFFFF;
 }
 footer a:hover, footer a:focus {
-	color: crimson;
+	color: steelblue;
 }
 footer .row {
 	max-width: 900px;
@@ -2580,7 +2580,7 @@ footer .copyright span:last-child::after {
 	width: 6rem;
 	line-height: 6.6rem;
 	text-align: center;
-	background: crimson;
+	background: steelblue;
 	color: #FFFFFF;
 	text-align: center;
 	text-transform: uppercase;
